--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Michelle Bu, Eric Zhang, Alex Sosnovskiy",
   "license": "MIT",
   "scripts": {
-    "start": "peerjs --port 9000",
+    "start": "peerjs --port 9000"
   },
   "release": {
     "branch": "master"
