--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "branch": "master"
   },
   "dependencies": {
-    "peerjs": "^1.3.1"
+    "peerjs": "^1.3.1",
+    "express": "^4.17.1"
   },
   "engines": {
     "node": ">=10"
