--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "branch": "master"
   },
   "dependencies": {
-    "peerjs": "^1.3.1",
+    "peer": "^0.5.3"
     "express": "^4.17.1"
   },
   "engines": {
