--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "branch": "master"
   },
   "dependencies": {
-    "peer": "^0.5.3",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "node-fetch": "^2.6.1",
+    "peer": "^0.5.3"
   },
   "engines": {
     "node": ">=10"
